tests/constructor/return_type.rev
struct Foo {
    fn init() -> int {} // error: constructor can't return anything
}